[workspace]
members = [
"add_two_numbers", "intersection_of_two_arrays", "palindrome_number", "roman_to_integer", # Medium difficulty
"two_sum", # Easy difficulty
]	

resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
